--- a/agendamento.html
+++ b/agendamento.html
@@ -69,7 +69,7 @@
                         </div> <!-- from-wraper -->
                         <div class="voltar">
                             <center>
-                                <a href="">Início</a>
+                                <a href="index.html">Início</a>
                             </center>
                         </div>
 
