--- a/index.html
+++ b/index.html
@@ -33,17 +33,52 @@
             <center class="center-esquerda">
               <img class="logo" src="images/logo215x273.png" alt="Logo">
             </center>
-              <img class="couch" src="images/couch.png" alt="Couch">
+            <img class="couch" src="images/couch.png" alt="Couch">
           </div>
         </div>
       </section>
       <section class="vertical-scrolling">
         <br>
         <div id="service-section" class="nossos-servicos">
-          Segunda div
+          <header>
+            <div class="buttons-right">
+              <button class="login-register button-left">
+                Faça o seu login
+              </button>
+              <button class="login-register">
+                Cadastre-se
+              </button>
+            </div>
+            <center>
+              <a class="nossos-servicos-title">
+                Nossos serviços
+              </a>
+            </center>
+          </header>
+          <div class="conteudo-segunda">
+            <div class="card-services">
+              <a class="card-title">Vacinas</a>
+            </div>
+            <div class="card-services">
+              <a class="card-title">Internação</a>
+            </div>
+            <div class="card-services">
+              <a class="card-title">Banho e tosa</a>
+            </div>
+            <div class="card-services">
+              <a class="card-title">Hotel</a>
+            </div>
+          </div>
+          <div class="segundo-image-right">
+            <img class="image-aquario" src="images/ImageNossosServicos.png" alt="Aquario">
+          </div>
+          <div class="segundo-image-left">
+            <img class="image-patas" src="images/patas.png" alt="Patas">
+          </div>
         </div>
       </section>
       <section class="vertical-scrolling">
+        <br>
         <div class="quem-somos">
           terceira
         </div>
