--- a/agendamento.html
+++ b/agendamento.html
@@ -61,7 +61,7 @@
                     </div> <!-- from-wraper -->
                     <div class="voltar">
                         <center>
-                            <a href="">Início</a>
+                            <a href="index.html">Início</a>
                         </center>
                     </div>
                     
