--- a/index.html
+++ b/index.html
@@ -80,7 +80,30 @@
       <section class="vertical-scrolling">
         <br>
         <div class="quem-somos">
-          terceira
+          <header>
+            <div class="buttons-right">
+              <button class="login-register button-left">
+                Faça o seu login
+              </button>
+              <button class="login-register">
+                Cadastre-se
+              </button>
+            </div>
+          </header>
+          <div class="direita-quemsomos">
+            <h1>Quem somos:</h1>
+            <h3>
+              Somos uma clínica veterinária que está no mercado a mais de 15 anos.
+              Prezamos pelo ótimo atendimento aos nossos clientes e seus pets.
+            </h3>
+            <h5>“Nossos animais merecem uma vida saudável”</h5>
+          </div>
+          <div class="esquerda">
+            <div class="center-esquerda-quemsomos">
+              <img class="logo" src="images/logo215x273.png" alt="Logo">
+            </div>
+            <img class="gato" src="images/gato.png" alt="Gato">
+          </div>
         </div>
       </section>
     </div>
