--- a/agendamento.html
+++ b/agendamento.html
@@ -12,6 +12,11 @@
 <section class="agendamento">
 
 <div class="conteudo-full">
+
+    <div class="text-mobile">
+        <h2>Agendamento</h2>
+        <p> <span>Agende</span> e nos informe qual serviço deve ser prestado para o seu pet, assim poderemos lhe ajudar!</p>
+    </div>
    
     <div class="text-content">
         <img class="patas" src="images/Group.png">
@@ -32,7 +37,7 @@
                     </div> <!--form-wraper-->
                     <div class="form-wraper w50">
                         <span>Dia: </span>
-                        <input type="date" name="dia" placeholder="DD/MM/AAAA">
+                        <input type="date" name="dia">
                     </div> <!--form-wraper-->
                     <div class="form-wraper w50">
                         <span>Horário: </span>
