Seção de serviços 100% ✅

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <h3 class="messege-mobile">
           Ou
         </h3>
-        <a href="#nossos-servicos-mobile" class="nossos-servicos-mobile">
+        <a href="servicos.html" class="nossos-servicos-mobile">
           Conheça os nossos serviços
         </a>
         </br>
@@ -141,7 +141,7 @@
               <h3 class="mensagem-top">Tudo o que o seu pet precisa em um só lugar!</h3>
               <button class="login">Faça o seu login</button>
               <h3 class="mensagem-bottom">Ou</h3>
-              <a href="#secondSection" class="conheca">Conheça os nossos serviços!</a>
+              <a href="servicos.html" class="conheca">Conheça os nossos serviços!</a>
               <p class="criar-conta">Não possuo uma conta!</p>
             </div>
           </div>
