--- a/cliente.html
+++ b/cliente.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Bem vindo!</title> 
+	<title>Pet Care - Usuário</title> 
 	<meta charset="utf-8">
 	<link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;700&display=swap" rel="stylesheet">
 	<style type="text/css">
