Página de Login

--- a/agendamento.html
+++ b/agendamento.html
@@ -57,7 +57,7 @@
                         <center>
                             <span>Descrição: </span>
                         </center>
-                        <textarea name="mensagem"  id="mensagem" placeholder="Descrição do serviço desejado..." onkeypress="tiraBordaMensagem();validaMensagem();" onclick="tiraBordaMensagem();" required></textarea>
+                        <textarea name="mensagem"  id="mensagem" placeholder="Descrição do serviço desejado..." onkeypress="tiraBordaMensagem();" onclick="tiraBordaMensagem();" onblur="validaMensagem();" required></textarea>
                     </div> <!--form-wraper-->
                     <div class="form-wraper w100">
                         <center>
