--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
         <h3 class="messege-mobile">
           Tudo o que o seu pet precisa em um só lugar!
         </h3>
-        <button class="login-mobile">
-          Faça o seu login
+        <button class="login-mobile" onclick="window.location.href = 'login.html'">
+           Faça o seu login
         </button>
         <h3 class="messege-mobile">
           Ou
@@ -52,7 +52,7 @@
             </h1>
           </div>
           <div class="col d-flex justify-content-end">
-            <button class="login-register-mobile login-servicos-button-left">Faça o seu login</button>
+            <button class="login-register-mobile login-servicos-button-left" onclick="window.location.href = 'login.html'">Faça o seu login</button>
             <button class="login-register-mobile">Cadastre-se</button>
           </div>
         </div>
@@ -103,7 +103,7 @@
       <header id="nossos-servicos-mobile" class="header-mobile">
         <div class="row">
           <div class="col d-flex justify-content-end">
-            <button class="login-register-mobile login-servicos-button-left">Faça o seu login</button>
+            <button class="login-register-mobile login-servicos-button-left" onclick="window.location.href = 'login.html'">Faça o seu login</button>
             <button class="login-register-mobile">Cadastre-se</button>
           </div>
         </div>
@@ -139,7 +139,7 @@
             <div class="conteudo-direita vertical-center">
               <h1 class="bem-vindo">Bem vindo ao Pet Care</h1>
               <h3 class="mensagem-top">Tudo o que o seu pet precisa em um só lugar!</h3>
-              <button class="login">Faça o seu login</button>
+              <button class="login" onclick="window.location.href = 'login.html'">Faça o seu login</button>
               <h3 class="mensagem-bottom">Ou</h3>
               <a href="servicos.html" class="conheca">Conheça os nossos serviços!</a>
               <p class="criar-conta">Não possuo uma conta!</p>
@@ -158,7 +158,7 @@
         <div id="service-section" class="nossos-servicos">
           <header>
             <div class="buttons-right">
-              <button class="login-register button-left">
+              <button class="login-register button-left" onclick="window.location.href = 'login.html'">
                 Faça o seu login
               </button>
               <button class="login-register">
@@ -198,7 +198,7 @@
         <div class="quem-somos">
           <header>
             <div class="buttons-right">
-              <button class="login-register button-left">
+              <button class="login-register button-left" onclick="window.location.href = 'login.html'">
                 Faça o seu login
               </button>
               <button class="login-register">
