Tentativa de UPDATE

--- a/cliente.html
+++ b/cliente.html
@@ -98,13 +98,13 @@
 
 <div class="w70">
 	<div class="chamada">
-		 <h2>Bem vindo NOME_CLIENTE</h2>
+		 <h2>Bem vindo!</h2>
 		 <h3>Agende uma consulta para o seu Pet</h3>
 		 <div class="botao2">
-		 <a href="">Agendar consulta</a><br>
+		 <a href="agendamento.html">Agendar consulta</a><br>
 		 </div><!--botao2-->
 		 <div class="inicio2">
-		 <a href="">Início</a><br>
+		 <a href="index.html">Início</a><br>
 		 </div><!--inicio2-->
 		 
 	</div><!--chamada-->
