--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </a>
         </br>
       </br>
-        <a href="" class="create-account-mobile">
+        <a onclick="window.location.href = 'cadastrar.html'" class="create-account-mobile">
           Não possuo uma conta!
         </a>
       </div>
@@ -53,7 +53,7 @@
           </div>
           <div class="col d-flex justify-content-end">
             <button class="login-register-mobile login-servicos-button-left" onclick="window.location.href = 'login.html'">Faça o seu login</button>
-            <button class="login-register-mobile">Cadastre-se</button>
+            <button onclick="window.location.href = 'cadastrar.html'" class="login-register-mobile">Cadastre-se</button>
           </div>
         </div>
       </header>
@@ -104,7 +104,7 @@
         <div class="row">
           <div class="col d-flex justify-content-end">
             <button class="login-register-mobile login-servicos-button-left" onclick="window.location.href = 'login.html'">Faça o seu login</button>
-            <button class="login-register-mobile">Cadastre-se</button>
+            <button onclick="window.location.href = 'cadastrar.html'" class="login-register-mobile">Cadastre-se</button>
           </div>
         </div>
       </header>
@@ -142,7 +142,7 @@
               <button class="login" onclick="window.location.href = 'login.html'">Faça o seu login</button>
               <h3 class="mensagem-bottom">Ou</h3>
               <a href="servicos.html" class="conheca">Conheça os nossos serviços!</a>
-              <p class="criar-conta">Não possuo uma conta!</p>
+              <p onclick="window.location.href = 'cadastrar.html'" class="criar-conta">Não possuo uma conta!</p>
             </div>
           </div>
           <div class="esquerda">
@@ -161,7 +161,7 @@
               <button class="login-register button-left" onclick="window.location.href = 'login.html'">
                 Faça o seu login
               </button>
-              <button class="login-register">
+              <button onclick="window.location.href = 'cadastrar.html'" class="login-register">
                 Cadastre-se
               </button>
             </div>
@@ -201,7 +201,7 @@
               <button class="login-register button-left" onclick="window.location.href = 'login.html'">
                 Faça o seu login
               </button>
-              <button class="login-register">
+              <button onclick="window.location.href = 'cadastrar.html'" class="login-register">
                 Cadastre-se
               </button>
             </div>
